// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReviewListItem > renders default state 1`] = `
<div>
  <button
    aria-label="Open review: Sample Review"
    class="relative w-full text-left rounded-card r-card-lg p-3 bg-[hsl(var(--card)/0.9)] border border-[hsl(var(--border)/0.35)] transition-all duration-200 focus-visible:outline-none disabled:opacity-60 disabled:pointer-events-none hover:ring-2 hover:ring-[--theme-ring] data-[selected=true]:ring-2 data-[selected=true]:ring-[--theme-accent]"
    data-scope="reviews"
    type="button"
  >
    <div
      class="flex flex-col gap-2"
    >
      <div
        class="flex items-start justify-between gap-2"
      >
        <div
          class="truncate font-medium text-base"
        >
          Sample Review
        </div>
        <div
          class="truncate text-sm text-muted-foreground"
        >
          Lux vs Ahri
        </div>
      </div>
      <div
        class="flex items-center justify-between gap-2"
      >
        <div
          class="flex items-center gap-2"
        >
          <span
            aria-hidden="true"
            class="h-2 w-2 rounded-full ring-2 motion-safe:animate-[blink_1s_steps(2)_infinite] motion-reduce:animate-none bg-success ring-success"
          />
          <span
            class="inline-flex items-center font-medium border rounded-2xl bg-muted/25 border-border/20 text-muted-foreground px-1 py-0 text-xs leading-none"
          >
            MID
          </span>
        </div>
        <span
          aria-label="Rating 9 out of 10"
          class="px-2 py-0.5 rounded-full text-xs leading-none font-medium text-background bg-gradient-to-br from-[--theme-accent] to-[--theme-accent2] ring-1 ring-[--theme-accent] [--ring:var(--theme-accent)]"
        >
          9
          /10
        </span>
      </div>
    </div>
  </button>
</div>
`;

exports[`ReviewListItem > renders loading state 1`] = `
<div>
  <div
    class="relative w-full text-left rounded-card r-card-lg p-3 bg-[hsl(var(--card)/0.9)] border border-[hsl(var(--border)/0.35)] transition-all duration-200 focus-visible:outline-none disabled:opacity-60 disabled:pointer-events-none hover:ring-2 hover:ring-[--theme-ring] data-[selected=true]:ring-2 data-[selected=true]:ring-[--theme-accent] motion-safe:animate-pulse motion-reduce:animate-none"
    data-scope="reviews"
  >
    <div
      class="h-3 rounded-md bg-muted w-3/5 mb-3"
    />
    <div
      class="h-3 rounded-md bg-muted w-2/5"
    />
  </div>
</div>
`;

exports[`ReviewListItem > renders selected state 1`] = `
<div>
  <button
    aria-label="Open review: Sample Review"
    class="relative w-full text-left rounded-card r-card-lg p-3 bg-[hsl(var(--card)/0.9)] border border-[hsl(var(--border)/0.35)] transition-all duration-200 focus-visible:outline-none disabled:opacity-60 disabled:pointer-events-none hover:ring-2 hover:ring-[--theme-ring] data-[selected=true]:ring-2 data-[selected=true]:ring-[--theme-accent]"
    data-scope="reviews"
    data-selected="true"
    type="button"
  >
    <div
      class="flex flex-col gap-2"
    >
      <div
        class="flex items-start justify-between gap-2"
      >
        <div
          class="truncate font-medium text-base"
        >
          Sample Review
        </div>
        <div
          class="truncate text-sm text-muted-foreground"
        >
          Lux vs Ahri
        </div>
      </div>
      <div
        class="flex items-center justify-between gap-2"
      >
        <div
          class="flex items-center gap-2"
        >
          <span
            aria-hidden="true"
            class="h-2 w-2 rounded-full ring-2 motion-safe:animate-[blink_1s_steps(2)_infinite] motion-reduce:animate-none bg-success ring-success"
          />
          <span
            class="inline-flex items-center font-medium border rounded-2xl bg-muted/25 border-border/20 text-muted-foreground px-1 py-0 text-xs leading-none"
          >
            MID
          </span>
        </div>
        <span
          aria-label="Rating 9 out of 10"
          class="px-2 py-0.5 rounded-full text-xs leading-none font-medium text-background bg-gradient-to-br from-[--theme-accent] to-[--theme-accent2] ring-1 ring-[--theme-accent] [--ring:var(--theme-accent)]"
        >
          9
          /10
        </span>
      </div>
    </div>
  </button>
</div>
`;

exports[`ReviewListItem > renders untitled state 1`] = `
<div>
  <button
    aria-label="Open review: Untitled Review"
    class="relative w-full text-left rounded-card r-card-lg p-3 bg-[hsl(var(--card)/0.9)] border border-[hsl(var(--border)/0.35)] transition-all duration-200 focus-visible:outline-none disabled:opacity-60 disabled:pointer-events-none hover:ring-2 hover:ring-[--theme-ring] data-[selected=true]:ring-2 data-[selected=true]:ring-[--theme-accent]"
    data-scope="reviews"
    type="button"
  >
    <div
      class="flex flex-col gap-2"
    >
      <div
        class="flex items-start justify-between gap-2"
      >
        <div
          aria-label="Untitled Review"
          class="truncate font-medium text-base text-muted-foreground/70"
        >
          Untitled Review
        </div>
        <div
          class="truncate text-sm text-muted-foreground"
        >
          Lux vs Ahri
        </div>
      </div>
      <div
        class="flex items-center justify-between gap-2"
      >
        <div
          class="flex items-center gap-2"
        >
          <span
            aria-hidden="true"
            class="h-2 w-2 rounded-full ring-2 motion-safe:animate-[blink_1s_steps(2)_infinite] motion-reduce:animate-none bg-success ring-success"
          />
          <span
            class="inline-flex items-center font-medium border rounded-2xl bg-muted/25 border-border/20 text-muted-foreground px-1 py-0 text-xs leading-none"
          >
            MID
          </span>
        </div>
        <span
          aria-label="Rating 9 out of 10"
          class="px-2 py-0.5 rounded-full text-xs leading-none font-medium text-background bg-gradient-to-br from-[--theme-accent] to-[--theme-accent2] ring-1 ring-[--theme-accent] [--ring:var(--theme-accent)]"
        >
          9
          /10
        </span>
      </div>
    </div>
  </button>
</div>
`;
